# clement-jean.github.io

./: .gitignore  404.html  Gemfile  _config.yml  about.md  build-site.el  build.sh  categories.html  contact.md  feed.xml  github.html  hire_me.md  index.html  init.sh  robots.txt  sitemap.xml  style.css  style.css.map  style.scss  towards-fluency-cn  towards-fluency-cn.html  towards-fluency-fr  towards-fluency.html
_includes/: newsletter.html  svg-icons.html
_layouts/: default.html  other.html  post.html
_org/: .dir-locals.el  2025-05-23-test.org  2025-05-26-introducing_codetabs.org
_posts/: 2014-3-3-Hello-World.md  2017-10-24-5-reasons-why-you-lost-time-in-school.md  2017-11-9-The-bigest-scam-in-education.md  2017-12-13-Some-observations-on-language-acquisition.md  2017-12-20-5-reasons-why-classical-tests-don’t-show-your-real-level.md  2017-12-21-A-journey-towards-education-for-all.md  2017-12-23-you're-not-a-great-leader.md  2017-12-24-be-focused-or-be-replaced!.md  2017-12-30-Creativity-+-Imagination-=-Memory.md  2018-01-06-Effects-of-habits-in-life.md  2018-02-01-An-universal-language-?.md  2018-02-09-Productivity:-step-by-step-approach.md  2018-02-09-Productivity:-step-by-step-technique.md  2018-02-10-Productivity:-keep-it-simple-.md  2018-02-13-Productivity:-Quality-over-quantity.md  2018-02-13-Productivity:-quality-over-quantity.md  2018-02-18-Productivity:-Challenge-yourself.md  2018-02-20-The-ideal-school.md  2018-02-28-What-happened-to-us?.md  2018-03-02-Productivity:-The-middle-way.md  2018-03-06-How-I-see-women's-day.md  2018-03-08-Who-the-f***-moved-my-cheese?!.md  2018-03-10-Emojis-as-universal-language?.md  2018-03-12-Work-for-experience-not-money.md  2018-03-14-What-school-does-right.md  2018-03-17-The-fluency-secret-language-schools-a-ways-hided-from-you.md  2018-03-18-Seguin-xian-sheng-de-yang.md  2018-04-08-Knowledge,-please-help-me!.md  2018-04-08-Knowledge-please-help-me.md  2018-07-19-UnaryOperator-in-C++.md  2018-07-20-Improving-search-in-double-linked-lists-C++.md  2018-09-20-the-linguists-coffee-part1.md  2018-09-21-the-linguists-coffee-part2.md  2020-03-7-my_favorites_design_patterns.md  2020-03-9-grpc_do_not_mock.md  2021-02-07-code_download_for_grpc_csharp.md  2021-02-15-value_matchers_in_espresso_intents.md  2021-02-7-code_download_for_grpc_csharp.md  2021-09-16-if_modified_since_for_redis.md  2022-02-7-code_download_for_grpc_csharp.md  (+20 more)
_sass/: _config.scss  _highlights.scss  _svg-icons.scss
about/: index.html
categories/: index.html
code_download_for_grpc_csharp/: index.html
css/: codeblock.css  org-code.css  org-htmlize.css  org-normalize.css  org-style.css  style.css  style.css.map
custom_rpc_options/: index.html
go-monorepos-intro/: index.html
grpc_authz_envoy/: index.html
grpc_do_not_mock/: index.html
grpc_go_embeddings/: index.html
hire_me/: index.html
if_modified_since_for_redis/: index.html
introducing_codetabs/: index.html
js/: codetabs.js
my_favorites_design_patterns/: index.html
one_character_to_save_200_bytes/: index.html
packed_vs_unpacked_repeated_fields/: index.html
pagination_in_grpc/: index.html
parse_go_module_files/: index.html
posts/: 2018-09-21-the-linguists-coffee-part2.md
src/2023-04-13-custom_rpc_options/proto/: BUILD.bazel  Hello.cs  hello.proto  world.pb.go  world.proto
src/2023-04-17-custom_rpc_options/: BUILD.bazel  WORKSPACE.bazel  csharp_deps.bzl  go.mod  go_deps.bzl  paket.dependencies  versions.bzl
src/2023-04-17-custom_rpc_options/cc/: BUILD.bazel  main.cc
src/2023-04-17-custom_rpc_options/csharp/: BUILD.bazel
src/2023-04-17-custom_rpc_options/go/: BUILD.bazel
src/2023-04-17-custom_rpc_options/java/: BUILD.bazel
src/2023-04-17-custom_rpc_options/proto/: World.cs  hello.pb.go  hello_pb2.py  world_grpc.pb.go  world_pb2.py
src/2023-04-17-custom_rpc_options/python/: main.py
(+35 files in other folders)
