load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_java//java:defs.bzl", "java_proto_library")
load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")

proto_library(
    name = "proto_proto",
    srcs = [
        "hello.proto",
        "world.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:descriptor_proto",
    ],
)

# Go
go_proto_library(
    name = "proto_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/Clement-Jean/test/proto",
    proto = ":proto_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "proto_go",
    embed = [":proto_go_proto"],
    importpath = "github.com/Clement-Jean/test/proto",
    visibility = ["//visibility:public"],
)

# Java

java_proto_library(
    name = "proto_java_proto",
    visibility = ["//visibility:public"],
    deps = [":proto_proto"],
)

# C++

cc_proto_library(
    name = "proto_cc_proto",
    visibility = ["//visibility:public"],
    deps = [":proto_proto"],
)

# Python

exports_files([
    "hello_pb2.py",
    "world_pb2.py",
])

# C#

exports_files([
    "Hello.cs",
    "World.cs",
])

# Js

copy_to_bin(
    name = "hello_pb",
    srcs = ["hello_pb.js"],
    visibility = ["//:__subpackages__"],
)

copy_to_bin(
    name = "world_pb",
    srcs = ["world_pb.js"],
    visibility = ["//:__subpackages__"],
)

exports_files([
    "hello_pb.js",
    "world_pb.js",
])
