load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "test_go_lib",
    srcs = ["main.go"],
    importpath = "github.com/Clement-Jean/test",
    visibility = ["//visibility:private"],
    deps = [
        "//proto:proto_go",
        "@org_golang_google_protobuf//proto:go_default_library",
        "@org_golang_google_protobuf//types/descriptorpb:go_default_library",
    ],
)

go_binary(
    name = "test_go",
    embed = [":go_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_lib",
    srcs = ["main.go"],
    importpath = "github.com/Clement-Jean/test/go",
    visibility = ["//visibility:private"],
    deps = [
        "//proto:proto_go",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//types/descriptorpb",
    ],
)
